--- a/css/colors.css
+++ b/css/colors.css
@@ -25,12 +25,12 @@ a:focus {
 .nav-pills > li.active > a:hover,
 .icon-wrapper:hover i,
 .grd1 {
-    color: #ffffff;
-    background: #db00ce;
-    background: -moz-linear-gradient(left, #db00ce 0%, #2750ff 100%);
-    background: -webkit-linear-gradient(left, #db00ce 0%, #2750ff 100%);
-    background: linear-gradient(to right, #db00ce 0%, #2750ff 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#db00ce', endColorstr='#2750ff', GradientType=1);
+    background: rgb(50, 50, 50); /* Fallback color for browsers that don't support gradients */
+    background: -moz-linear-gradient(top, rgba(50, 50, 50, 1) 0%, rgba(0, 0, 0, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(50, 50, 50, 1) 0%, rgba(0, 0, 0, 1) 100%);
+    background: linear-gradient(to bottom, rgba(50, 50, 50, 1) 0%, rgba(0, 0, 0, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#323232', endColorstr='#000000', GradientType=0);
+
 }
 
 .icon_wrap,
